app/styles/main.css
/* ... */
.list ul li.list-row ul li a {
  position: relative;
  display: block;
  padding: 10px 10px;
}

.list ul li span.glyphicon {
  margin-left: 10px;
  color: #646464;
  border-color: #646464;
  font-size: 22px;
}

.list ul li.list-row:hover span.glyphicon {
  color: #ffffff;
  border-color: #ffffff;
}

/* systems */

.systems {
}

.systems ul {
  padding: 0;
  margin: 0;
}

.systems ul li.system-row {
  padding-top: 5px;
  min-height: 80px;
  padding-right: 10px;
}

.systems ul li:hover {
  background-color: #384049;
  /*cursor: pointer;*/
}

.systems ul li .system-title {
  color: #c3c5c5;
  font-size: 22px;
  float: left;
  position: relative;
  display: block;
  padding: 20px 15px;
}

.systems ul li:hover .system-title {
  color: #ffffff;
}

.systems ul li:hover .system-title a {
  color: #ffffff;
}

.systems ul li .system-title a {
  color: #c3c5c5;
}
.systems ul li .system-title a:hover {
  color: #c3c5c5;
}

.systems ul li .system-title span:nth-child(2) {
  margin-left: 100px;
}

.systems ul li.system-row ul li {
  position: relative;
  display: block;
  padding-top: 0;
  float: left;
}

.systems ul li.system-row ul li a {
  position: relative;
  display: block;
  padding: 10px 10px;
}

.systems ul li span.glyphicon {
  margin-left: 10px;
  color: #646464;
  border-color: #646464;
  font-size: 22px;
}

.systems ul li.system-row:hover span.glyphicon {
  color: #ffffff;
  border-color: #ffffff;
}

/* revisions */

#revisions {

}

.revisions h5 {
  font-size: 18px;
}

.revisions {
}

.revisions ul {
  padding: 0;
  margin: 0;
}

.revisions ul li.revision-row {
  padding-top: 5px;
  min-height: 40px;
  padding-right: 10px;
}

.revisions ul li:hover {
  background-color: #384049;
  /*cursor: pointer;*/
}

.revisions ul li .revision-title {
  color: #c3c5c5;
  font-size: 14px;
  float: left;
  position: relative;
  display: block;
  padding: 5px 5px;
}

.revisions ul li .revision-title a {
  color: #c3c5c5;
}

.revisions ul li:hover .revision-title {
  color: #ffffff;
}

.revisions ul li:hover .revision-title a {
  color: #ffffff;
}

/* containers */

#containers {

}

.containers {
}

.containers ul {
  padding: 0;
  margin: 0;
}

.containers ul li.container-row {
  padding-top: 5px;
  min-height: 80px;
  padding-right: 10px;
}

.containers ul li:hover {
  background-color: #384049;
  /*cursor: pointer;*/
}

.containers ul li .container-title {
  color: #c3c5c5;
  font-size: 22px;
  float: left;
  position: relative;
  display: block;
  padding: 20px 15px;
}

.containers ul li .container-title a {
  color: #c3c5c5;
}

.containers ul li:hover .container-title {
  color: #ffffff;
}

.containers ul li:hover .container-title a {
  color: #ffffff;
}

.containers ul li .container-title span:nth-child(2) {
  margin-left: 100px;
}

.containers ul li.container-row ul li {
  position: relative;
  display: block;
  padding-top: 0;
  float: left;
}

.containers ul li .container-title span:nth-child(1) {
  float: left;
  width: 300px;
}

.containers ul li.container-row ul li a {
  position: relative;
  display: block;
  padding: 10px 10px;
}

.containers ul li span.glyphicon {
  margin-left: 10px;
  color: #646464;
  border-color: #646464;
  font-size: 22px;
}

.containers ul li.container-row:hover span.glyphicon {
  color: #ffffff;
  border-color: #ffffff;
}

/* container */

.container-details {
}

.container-details ul {
  padding: 0;
  margin: 0;
}

.container-details ul li {
  padding-top: 5px;
  min-height: 60px;
  padding-right: 10px;
  background-color: #2a2e36;
}

.container-details ul li a {
  margin-right: 10px;
  color: #8e8e8e;
}

.container-details ul li:nth-child(odd) {
  background: #262c33;
}

.container-details ul li:nth-child(odd) a {
  color: #646464;
}

.container-details ul li .title {
  color: #c3c5c5;
  font-size: 22px;
  float: left;
  position: relative;
  display: block;
  padding: 10px 15px;
}

.container-details ul li .title a {
  color: #c3c5c5;
}

.container-details ul li:hover .title {
  color: #ffffff;
}

.container-details ul li .title span:nth-child(1) {
  float: left;
  width: 300px;
}

.container-details ul li .title span:nth-child(2) {
  max-width: 500px;
  float: left;
  overflow: scroll;
  white-space: nowrap;
}

.container-details .table tr {
  border-left: 2px solid transparent;
  background-color: #f8f8f8;
  border-bottom: 1px solid #eeeeee;
}

.container-details .table tr:hover {
  border-left-color: #ccc;
}

.container-details .table td {
  font-size: 22px;
  padding: 20px 15px;
  min-height: 80px;
  color: #333;
  border-top: 0;
}

.container-build {
  border: 1px solid #c3c3c3;
  margin: 10px 0;
  padding: 10px 0 0 0;
  max-height: 200px;
  overflow-y: scroll;
}

.container-build span.debug {

}

.container-build span.info {

}

.container-build span.warn {
  color: #f0ad4e;
}

.container-build span.error {
  color: #d9534f;
}

.container-build ul li i.fa-spinner {
  display: none;
}
.container-build ul li:first-child i.fa-spinner {
  display: inline-block;
}

/* Set the fixed height of the footer here */
footer {
  height: 60px;
  margin-top: -60px;
  background-color: #384049;
  color: #9e9e9e;
  text-transform: uppercase;
  position: relative;
  clear:both;
}

footer a {
  color: #393939;
}

footer p {
  margin: 10px 0 0 0;
}
footer p:nth-child(2) {
  margin: 0;
}

footer p span {
  margin: 0 20px;
}

.footer {
  margin-top: 200px;
}

#welcome {
  margin: 200px auto;
  height: 400px;
}

#main {
  margin: 30px auto;
}

#containers {
  margin: 30px auto;
}

#container {
  margin: 30px auto;
}

#account {
  margin: 20px auto;
}

#account .form {
  width: 600px;
}

#timeline h2 {
  color: red;
  font-style: italic;
}
/* ... */

